--- a/public/package.json
+++ b/public/package.json
@@ -10,4 +10,6 @@
         "express": "^4.17.1",   // Express.js dependency
         "body-parser": "^1.19.0" // body-parser dependency
     }
+"author": "Your Name",
+  "license": "ISC"
 }
